# Calculator_Qt

./: .gitignore  CMakeLists.txt  Calculator.cpp  Calculator.h  Main.qml  README.md  database.cpp  database.h  main.cpp
UI_components/: CalcButton.qml  HistoryPanel.qml
